Fixed some layout issues.
When a vertical scroll bar appeared, if the window was narrow enough, the toolbar would be cropped a bit on both sides.
Additionally, in certain grid layout experiments, this caused a horizontal scrollbar to appear when there was a vertical one, even when the window was very wide.

--- a/header.css
+++ b/header.css
@@ -5,7 +5,6 @@
 
 body header {
     background: var(--color);
-    margin: 0 calc(50% - 50vw);
     position: sticky;
     top: 0;
     z-index: 1;
